# ProjProg

./: MyApp.cpp  MyApp.h  MyCard.cpp  MyCard.h  MyCardFrame.cpp  MyCardFrame.h  MyFrame.cpp  MyFrame.h  MyPanel.cpp  MyPanel.h  README.md
listmakers/: CMakeLists.txt  Controller.h  Model.h  MyApp.h  MyCard.cpp  MyCard.h  MyCardFrame.cpp  MyCardFrame.h  MyPanel.cpp  MyPanel.h  MySublist.cpp  MySublist.h  Observer.h  Subject.h  View.cpp  View.h
listmakers_tests/: CMakeLists.txt
